Cambios de modal

--- a/vistas/privado/clientes.html
+++ b/vistas/privado/clientes.html
@@ -96,7 +96,7 @@
         <!-- Componente Modal para ver detalle y actualizar de un registro -->
         <div class="modal fade" id="detailModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
             aria-labelledby="modalTitle" aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-dialog-centered bg-color-3blue">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="modalTitle"></h1>
@@ -108,44 +108,44 @@
                             <!-- Campo oculto para asignar el id del registro al momento de modificar -->
                             <input type="hidden" id="idCLiente" name="Cliente">
                             <div class="col-md-6">
-                                <label for="validationCustom01" class="form-label">Nombres</label>
-                                <input type="text" class="form-control" id="validationCustom01"
+                                <label for="validationCustomName" class="form-label">Nombres</label>
+                                <input type="text" class="form-control" id="validationCustomName"
                                     placeholder="Fernando José" required>
                             </div>
                             <div class="col-md-6">
-                                <label for="validationCustom02" class="form-label ">Apellidos</label>
-                                <input type="text" class="form-control" id="validationCustom02"
+                                <label for="validationCustomLastName" class="form-label ">Apellidos</label>
+                                <input type="text" class="form-control" id="validationCustomLastName"
                                     placeholder="Goméz Martinéz" required>
                             </div>
                             <div class="col-md-6 mt-3">
-                                <label for="validationCustom02" class="form-label ">DUI</label>
-                                <input type="text" class="form-control" id="validationCustom02"
+                                <label for="validationCustomDui" class="form-label ">DUI</label>
+                                <input type="text" class="form-control" id="validationCustomDui"
                                     placeholder="45345543-4" required>
                             </div>
                             <div class="col-md-6 mt-3">
-                                <label for="validationCustom02" class="form-label ">Teléfono</label>
-                                <input type="text" class="form-control" id="validationCustom02"
+                                <label for="validationCustomCellphone" class="form-label ">Teléfono</label>
+                                <input type="text" class="form-control" id="validationCustomCellphone"
                                     placeholder="6544-4654" required>
                             </div>
                             <div class="col-md-6 mt-3">
-                                <label for="validationCustom02" class="form-label ">Correo Electronico</label>
-                                <input type="text" class="form-control" id="validationCustom02"
+                                <label for="validationEmail" class="form-label ">Correo Electronico</label>
+                                <input type="text" class="form-control" id="validationEmail"
                                     placeholder="fernando.gomez@gmail.com" required>
                             </div>
                             <div class="col-md-6 mt-3">
-                                <label for="validationCustom02" class="form-label ">Fecha de Nacimiento</label>
-                                <input type="text" class="form-control" id="validationCustom02"
+                                <label for="validationBirthDay" class="form-label ">Fecha de Nacimiento</label>
+                                <input type="text" class="form-control" id="validationBirthDay"
                                     placeholder="22/07/98" required>
                             </div>
                             <div class="col-md-6 mt-3">
-                                <label for="validationCustom02" class="form-label">Fecha de Registro</label>
-                                <input type="text" class="form-control" id="validationCustom02"
+                                <label for="validationRegisterDay" class="form-label">Fecha de Registro</label>
+                                <input type="text" class="form-control" id="validationRegisterDay"
                                     placeholder="21/2/2024" required>
                             </div>
                             <div class="col-md-6 mt-3">
-                                <label for="validationCustom02" class="form-label ">Estado del
+                                <label for="validationStatus" class="form-label ">Estado del
                                     Cliente</label>
-                                <input type="text" class="form-control" id="validationCustom02"
+                                <input type="text" class="form-control" id="validationStatus"
                                     placeholder="Vigente" required>
                             </div>
                         </div>
